fix alignment on mobile and avatar size

--- a/src/components/CharacterCard/CharacterCard.scss
+++ b/src/components/CharacterCard/CharacterCard.scss
@@ -37,10 +37,10 @@
 
       img {
         width: 250px;
-
+        max-height: 168px;
+        
         @include mediaSize($medium) {
           width: 220px;
-          height: 165px;
         }
       }
 
